--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 
-volumes:
-  spotifycache:
+#volumes:
+#  spotifycache:
 
 services:
   # Core services
@@ -24,29 +24,29 @@ services:
       io.balena.features.balena-api: "1"
       io.balena.features.supervisor-api: 1
 
-  multiroom-server:
-    build: ./core/multiroom/server
-    restart: on-failure
-    ports:
-      - 1704:1704
-      - 1705:1705
-      - 1780:1780
+#  multiroom-server:
+#    build: ./core/multiroom/server
+#    restart: on-failure
+#    ports:
+#      - 1704:1704
+#      - 1705:1705
+#      - 1780:1780
 
-  multiroom-client:
-    build: ./core/multiroom/client
-    restart: on-failure
+#  multiroom-client:
+#    build: ./core/multiroom/client
+#    restart: on-failure
 
   # Plugins
   # -- Additional plugins can be added. See https://balena-labs-projects.github.io/balena-sound/plugins.
   # -- Remove unwanted plugins as needed
-  bluetooth:
-    build: ./plugins/bluetooth
-    restart: on-failure
-    network_mode: host
-    cap_add:
-      - NET_ADMIN
-    labels:
-      io.balena.features.dbus: 1
+  #  bluetooth:
+  #  build: ./plugins/bluetooth
+  #  restart: on-failure
+  #  network_mode: host
+  #  cap_add:
+  #    - NET_ADMIN
+  #  labels:
+  #    io.balena.features.dbus: 1
 
   airplay:
     build: ./plugins/airplay
@@ -56,13 +56,13 @@ services:
     labels:
       io.balena.features.dbus: 1
 
-  spotify:
-    build: ./plugins/spotify
-    restart: on-failure
-    privileged: true
-    network_mode: host
-    volumes:
-      - spotifycache:/var/cache/raspotify
+#  spotify:
+#   build: ./plugins/spotify
+#   restart: on-failure
+#   privileged: true
+#   network_mode: host
+#   volumes:
+#     - spotifycache:/var/cache/raspotify
 
   # https://github.com/balenablocks/hostname
   hostname:
