--- a/plugins/airplay/Dockerfile.template
+++ b/plugins/airplay/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM mikebrady/shairport-sync:4.1.1 as shairport
+FROM mikebrady/shairport-sync:4.3.1 as shairport
 WORKDIR /usr/src
 
 ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
@@ -7,13 +7,16 @@ ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
 SHELL ["/bin/sh", "-eo", "pipefail", "-c"]
 
 # shairport-sync docker image doesn't include pulseaudio support so we use ALSA bridge
-ENV PULSE_SERVER=tcp:localhost:4317
-RUN apk add --no-cache supervisor curl~=7 && \
-  curl -skL https://raw.githubusercontent.com/balena-labs-projects/audio/master/scripts/alsa-bridge/alpine-setup.sh | sh \
-  && apk del curl
+#ENV PULSE_SERVER=tcp:localhost:4317
+RUN apk add --no-cache supervisor 
+
+#curl~=7 && \
+#  curl -skL https://raw.githubusercontent.com/balena-labs-projects/audio/master/scripts/alsa-bridge/alpine-setup.sh | sh \
+#  && apk del curl
 
 COPY start.sh /usr/src/
 COPY supervisor.conf /usr/src/supervisor.conf
+COPY shairport-sync.conf /etc/shairport-sync.conf
 
 # shairport-sync image entrypoint starts dbus and avahi daemons that we don't need
 ENTRYPOINT []
